# Clockwork

./: .bash_helpers.sh  .gitignore  .travis.yml  AUTHORS.md  Build BestForOS.sh  Build CodeBlocks.sh  Build VS13.bat  BuildCodeBlocks.sh  Build_ClockworkEditor.bat  Build_ClockworkEditor.sh  CMakeLists.txt  Clean.sh  LICENSE.md  License.txt  Pull.sh  README.md  Rakefile  cmake_android.bat  cmake_android.sh  cmake_clean.bat  cmake_clean.sh  cmake_codeblocks.bat  cmake_codeblocks.sh  cmake_eclipse.sh  cmake_emscripten.bat  cmake_emscripten.sh  cmake_generic.bat  cmake_generic.sh  cmake_ios.sh  cmake_macosx.sh  cmake_mingw.bat  cmake_mingw.sh  cmake_ninja.bat  cmake_ninja.sh  cmake_rpi.sh  cmake_vs2008.bat  cmake_vs2010.bat  cmake_vs2012.bat  cmake_vs2013.bat  cmake_vs2015.bat
Attic/NETNative/: CMakeLists.txt  ClockworkSharpAPI.h  ClockworkSharpApp.cpp  ClockworkSharpApp.h
Source/: CMakeLists.txt
Source/Atomic/Atomic2D/: Animation2D.cpp  Animation2D.h  AnimationSet2D.cpp  AnimationSet2D.h  Atomic2D.cpp  Atomic2D.h  CollisionCircle2D.cpp  CollisionCircle2D.h  Drawable2D.cpp  Drawable2D.h  ParticleEmitter2D.cpp  ParticleEmitter2D.h  Sprite2D.cpp  Sprite2D.h  SpriteSheet2D.cpp  SpriteSheet2D.h  StaticSprite2D.cpp  StaticSprite2D.h
Source/Atomic/Atomic3D/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationState.cpp  AnimationState.h  BillboardSet.cpp  BillboardSet.h  CustomGeometry.cpp  CustomGeometry.h  DecalSet.cpp  DecalSet.h  Model.cpp  Model.h  ParticleEmitter.cpp  ParticleEmitter.h  Skeleton.cpp  Skeleton.h  Skybox.cpp  Skybox.h  StaticModel.cpp  StaticModel.h  StaticModelGroup.cpp  StaticModelGroup.h  Terrain.cpp  Terrain.h  TerrainPatch.cpp  TerrainPatch.h
Source/Atomic/Audio/: Audio.cpp  Audio.h  AudioDefs.h  Sound.cpp  Sound.h  SoundListener.cpp  SoundListener.h  SoundSource.h  SoundSource3D.cpp  SoundSource3D.h
Source/Atomic/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.cpp  VectorBase.h
Source/Atomic/Core/: Attribute.h  Condition.cpp  Condition.h  Context.cpp  Context.h  CoreEvents.h  Main.h  MiniDump.cpp  MiniDump.h  Mutex.cpp  Mutex.h  Object.cpp  Object.h  ProcessUtils.cpp  ProcessUtils.h  Profiler.cpp  Profiler.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  WorkQueue.cpp  WorkQueue.h
Source/Atomic/Engine/: Application.cpp  Application.h  Engine.cpp  Engine.h  EngineEvents.h
Source/Atomic/Graphics/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  Drawable.cpp  Drawable.h  DrawableEvents.h  GPUObject.h  Geometry.cpp  Geometry.h  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsEvents.h  GraphicsImpl.h  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  OcclusionBuffer.cpp  OcclusionBuffer.h  Octree.cpp  Octree.h  OctreeQuery.cpp  OctreeQuery.h  RenderPath.cpp  RenderPath.h  RenderSurface.h  Renderer.cpp  Renderer.h  ShaderProgram.h  ShaderVariation.h  Tangent.cpp  Tangent.h  Technique.cpp  Technique.h  Texture.h  (+10 more)
Source/Atomic/IO/: Deserializer.cpp  Deserializer.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  IOEvents.h  Log.cpp  Log.h  MacFileWatcher.h  MacFileWatcher.mm  MemoryBuffer.cpp  MemoryBuffer.h  PackageFile.cpp  PackageFile.h  Serializer.cpp  Serializer.h  VectorBuffer.cpp  VectorBuffer.h
Source/Atomic/Input/: Controls.cpp  Controls.h  Input.cpp  Input.h  InputEvents.h
Source/Atomic/Math/: AreaAllocator.cpp  AreaAllocator.h  BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  Frustum.cpp  Frustum.h  MathDefs.h  Matrix3.cpp  Matrix3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4.cpp  Matrix4.h  Plane.h  Polyhedron.cpp  Polyhedron.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  StringHash.cpp  StringHash.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Atomic/Navigation/: Navigable.cpp  Navigable.h  NavigationMesh.cpp  NavigationMesh.h  OffMeshConnection.cpp  OffMeshConnection.h
Source/Atomic/Network/: Connection.cpp  Connection.h  HttpRequest.cpp  HttpRequest.h  Network.cpp  Network.h  NetworkEvents.h  NetworkPriority.cpp  NetworkPriority.h  Protocol.h
Source/Atomic/Physics/: CollisionShape.cpp  CollisionShape.h  Constraint.cpp  Constraint.h  PhysicsEvents.h  PhysicsUtils.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
Source/Atomic/Resource/: Decompress.cpp  Decompress.h  Image.cpp  Image.h  JSONFile.cpp  JSONFile.h  JSONValue.cpp  JSONValue.h  Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceEvents.h  XMLFile.h  (+3 more)
Source/Clockwork/: CMakeLists.txt  Clockwork.h  Clockwork.pc.in  DebugNew.h  Precompiled.h  Revision.cpp  Revision.h
Source/ClockworkEditor/: CMakeLists.txt
Source/ClockworkJS/: CMakeLists.txt
Source/ClockworkPlayer/: CMakeLists.txt  Player.cpp  Player.h
Source/ClockworkPlayerJS/: CMakeLists.txt  ClockworkPlayerJS.cpp
Source/ClockworkTool/: CMakeLists.txt  ClockworkTool.cpp  ClockworkTool.h
Source/ClockworkWebView/: CMakeLists.txt  ClockworkWebView.h  UIWebView.cpp  UIWebView.h  WebBrowserHost.cpp  WebBrowserHost.h  WebBrowserHost.mm  WebClient.cpp  WebClient.h  WebKeyboard.h  WebKeyboardLinux.cpp  WebKeyboardMac.cpp  WebKeyboardWindows.cpp  WebMessageHandler.cpp  WebMessageHandler.h  WebRenderHandler.cpp  WebRenderHandler.h  WebSchemeHandler.cpp  WebSchemeHandler.h  WebString.cpp  WebString.h  WebTexture2D.cpp  WebTexture2D.h  WebViewEvents.h  WebViewJS.cpp
Source/Extras/: CMakeLists.txt  Readme.txt
Source/Samples/: CMakeLists.txt  Sample.h  Sample.inl
Source/ToolCore/: CMakeLists.txt  ToolEnvironment.cpp  ToolEnvironment.h  ToolEvents.h  ToolPrefs.cpp  ToolPrefs.h  ToolSystem.cpp  ToolSystem.h
Source/ToolCoreJS/: CMakeLists.txt  ToolCoreJS.cpp
Source/Tools/: CMakeLists.txt
(+2254 files in other folders)
